# research-agent

./: .gitignore  Makefile  config.py  main.py  meta_prompt.txt  pyproject.toml  schema.py
chroma_db/: chroma.sqlite3
