[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "langchain-ollama>=1.0.1",
    "langchainhub>=0.1.21",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
]
